<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cc4a586f"/>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:background="#cc4a586f">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginBottom="20dp"
                android:background="@color/login_edittext"
                android:textSize="22sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="left|center_vertical"
                android:hint="@string/user_name"
                android:singleLine="true"
                android:id="@+id/username_edittext"
                android:text="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginBottom="30sp"
                android:background="@color/login_edittext"
                android:textSize="22sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="left|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/password_edittext"
                android:text="" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:text="@string/login"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:background="@drawable/login_button_selector"
                android:id="@+id/login_button" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:gravity="center"
            android:background="#cc14223b"
            android:id="@+id/forgot_password_text"
            android:paddingBottom="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:background="#cc14223b"
        android:id="@+id/signup_text"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>