<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view_profile"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center">

        <ImageView
            android:id="@+id/profile_avatar_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_avatar"/>

        <TextView
            android:layout_below="@id/avatar_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/change_profile_photo"
            android:textColor="@color/blue_main"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_36"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_36"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New text"
            android:textSize="15sp"
            android:textColor="@color/text_grey"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/margin_8"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New text"
            android:textSize="15sp"
            android:textColor="@color/text_grey"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/margin_8"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New text"
            android:textSize="15sp"
            android:textColor="@color/text_grey"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/margin_8"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_10"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logout"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_10"/>

</LinearLayout>